# aqua-dex

./: .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json
crates/slab-alloc/: Cargo.toml  LICENSE  README
crates/slab-alloc/src/: lib.rs
js/: bid.js  byte_quote.js  create_market.js  create_market_spl.js  limit_bid.js  log_info.js  market_info.js  market_wsol_usdc_1.json  new_token.sh  orders.js  orders2.js  orders3.js  package-lock.json  package.json  sizes.js  spl_orders1.js  storage_info.js  users.js  users_ids.js  users_orders.js  users_tokens.js
js/spl/: activate.js  create_market_spl.js  create_users.js  deactivate.js  manager_vault_deposit.js  manager_withdraw_fees.js  manager_withdraw_lamports.js  market_wsol_usdc_1.json  new_token.sh  orders1.js  rent1.js  result_accts_1.json  show_market.js  show_orderbook.js  show_settlement_log.js  show_trade_log.js  spl_orders1.js  token_meta1.js  usdv.json  user_orders_1.js  user_orders_2.js  user_tokens.js  users_orders.js  users_tokens.js  vault_crank.js
js/users/: mkconfig.py
programs/aqua-dex/: Cargo.toml
programs/aqua-dex/src/: lib.rs  slab_alloc.rs
tests/: aqua-dex.js
