[package]
name = "aqua-dex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "aqua_dex"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.14.0"
anchor-spl = "0.14.0"
murmur3 = "0.5.1"
arrayref = "0.3.6"
switchboard-program = "0.1.52"
solana-program = "1.7.11"
bytemuck = "1.7.2"
num_enum = "0.5.4"
byte-slice-cast = "1.0.0"
static_assertions = "1.1.0"
thiserror = "1.0.26"
slab_alloc = { version = "1.0.0", path = "/Users/mfrager/Build/solana/crates/slab-alloc" }
